--- a/hw11/styles/style.css
+++ b/hw11/styles/style.css
@@ -36,33 +36,27 @@ html{
 }
 
 body{
-    font-family: 'Lato';
-    font-style: normal;
-    line-height: 17px;
-    font-weight: 500;
-    font-size: 14.004px;
-    line-height: 17px;
     text-align: center;
-    letter-spacing: 0.28008px;
-    color: #878786;
     padding: 0; 
     margin: 0;
     /*outline: 2px solid black;*/
 }
 
+.text_basic{
+    font-family: 'Lato';
+    font-style: normal;
+    line-height: 17px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #878786;
+}
+
 .header__menu{
     display: flex;
     justify-content: space-between;
-    margin-left: 80px;
-    margin-right: 80px;
-    margin-top: 30px;
-    margin-bottom: 20px;
+    margin: 30px 80px 20px;
     align-items: center;
-}
-
-.header__logo{
-    line-height: 40px;
-    display: flex;
 }
 
 .header__logo_text{
@@ -80,10 +74,6 @@ body{
     color: #757575;
 }
 
-.search_form{
-    margin-left: 0px;
-}
-
 .button__blue_narrow{
     width: 75px;
     border: 1px solid #007AFF;
@@ -94,63 +84,67 @@ body{
 }
 
 .header__buttons{
-    width: 340px;
+    min-width: 340px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+.header__a{
+    width: 30px;
+}
+
 .header__img{
-    height: 28px;
+    width: 100%;
+    height: auto;
 }
 
 .header__img_cart{
-    height: 40px;
     opacity: 0.3;
 }
 
 .header__link{
     text-decoration: none;
     font-size: 15px;
-    line-height: 45px;
     font-weight: normal;
     color: #737270;
     margin-right: 40px;
-}
-
-.header__a:hover, .header__a:focus, .header__a:active{
-    opacity: 0.5;
 }
 
 .header__link:first-child{
     margin-left: 80px;
 }
 
+.header__link:last-child{
+    margin-right: 0;
+}
+
+.header__a:hover, .header__a:focus, .header__a:active{
+    opacity: 0.5;
+}
+
 .header__links{
     display: flex;
     justify-content: left;
-    height: 45px;
+    padding: 13px 0;
     background-color: #F4F4F4;
 }
 
 .wrapper{
     max-width: 970px;
-    margin: 0 auto;
-    margin-top: 40px;
+    margin: 40px auto 0;
 }
 
 .app-form__wrapper_border{
     width: 970px;
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 5px;
     border: 1px solid #C6C6C5;
     margin-bottom: 90px;
 }
 
 .app-form__wrapper{
     width: 930px;
-    margin: 0 auto;
-    margin-top: 40px;
-    margin-bottom: 20px;
+    margin: 40px auto 20px;
 }
 
 .app-form__field{
@@ -158,7 +152,6 @@ body{
     height: 40px;
     border-radius: 5px 5px 5px 5px;
     border: 1px solid #C6C6C5;
-    margin-bottom: 10px;
 }
 .app-form__field_wide{
     width: 100%;
@@ -174,6 +167,7 @@ body{
 .app-form__field_with_desc_name{
     width: 930px;
     flex-direction: row;
+    margin-bottom: 10px;
 }
 
 .app-form__field_name:last-child{
@@ -196,7 +190,7 @@ body{
 
 .app-form__field_with_desc_title{
     width: 930px;
-    margin-bottom: 39px;
+    margin-bottom: 49px;
 }
 
 .app-form__field_with_desc:last-child{
@@ -206,6 +200,7 @@ body{
 .app-form__block{
     display: flex;
     margin: 0;
+    margin-bottom: 10px;
 }
 
 .text{
@@ -214,6 +209,10 @@ body{
     font-weight: 500;
     margin-bottom: 9px;
     width: 100%;
+}
+
+.text_bottom{
+    margin-top: 10px;
 }
 
 .text_light{
@@ -240,12 +239,11 @@ body{
     margin-bottom: 17px;
 }
 
-button{  
-    height: 40px;
-    width: 100px;
-    border-radius: 5px 5px 5px 5px;
+button{
+    padding: 11px;/*у макета они везде разные*/
+    border-radius: 5px/* 5px 5px 5px*/;
     border: 1px solid #757575;
-    background-color: white;
+    background-color: transparent;
     color: #757575;
     font-weight: 600;
 }
@@ -262,24 +260,20 @@ button:hover, button:focus, button:active{
 }
 
 .app-form__buttons{
-    width: 908px;
-    margin: 0 auto;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    line-height: 40px;
+    line-height: 40px;/*если это убрать, съедет центрирование текста "By Submitting this application..." по вертикали, наверное, тогда этот текст тоже нужно оборачивать в див и задавать паддинг*/
     align-content: center;
-    margin-top: 27px;
-    margin-bottom: 27px;
+    margin: 27px auto;
 }
 
 .app-form__tabs{
     width: 930px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-around;
     align-content: center;
-    margin-bottom: 10px;
-    margin-top: 35px;
+    margin: 35px auto 10px;
 }
 
 h1{
@@ -336,8 +330,7 @@ a:hover, a:focus, a:active{
 }
 
 .links__social_img{
-    margin-left: 4px;
-    margin-top: 4px;
+    margin: 4px 0px 0px 4px;
     max-height: 16px;
     max-width: 12px;
     min-height: 11px;
@@ -346,9 +339,7 @@ a:hover, a:focus, a:active{
 
 .footer__wrapper{
     width: 200px;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 20px auto;
     display: flex;
     justify-content: space-between;
 }
