--- a/hw14/styles/style.css
+++ b/hw14/styles/style.css
@@ -88,7 +88,7 @@ body{
 .quote > img{
     display: block; 
     margin: 0 auto;
-    max-width: 90vw;
+    max-width: 100%;
     height: auto;
 }
 
